--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
-Hello World
+<!DOCTYPE html>
+
+<style type="text/css">
+body {padding: 2em;}
+h1 {text-align: center; line-height: 0.7; font-family: "Georgia"; font-weight:normal;}
+p {text-align: center; line-height: 0.7; font-family: "Georgia";}
+p1 {line-height: 1; font-family: "Georgia"; font-size: 20px}
+.box{font-family: Georgia; line-height: 1.5; }
+.left{float: left; width: 79%;}
+.right{float: right; width: 20%;}
+.text{display: block; width: 95%}
+hr.style-two {
+border: 0;
+height: 1px;
+background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  padding-left: 2em; 
+  text-indent: -1em;
+}
+
+li::before {
+  content: "➢ ";
+}
+</style>
+
+<html>
+<head>
+	<title>Resume-Jiaming-Guo</title>
+	<meta charset="utf-8">
+</head>
+
+<body>
+    <div>
+        <h1>Jiaming Guo</h1>
+        <p> markguo1998@gmail.com | (857) 320-8746 </p>
+        <p> 213 Mountain Ave, Malden, MA, 02148 </p>
+    </div>
+    <div class="box">
+        <p1>Education</p1>
+        <hr class="style-two">
+    </div>
+    <div class="box">
+        <span class="right">Sep 2015 - Present</span>
+        <span class="left"><b>Yuanpei College, Peking University</b>, China</span>
+        <span class="text">Bachelor of Science in Data Science and Big Data Technology, Sep 2015 - Jul 2019 (expected)</span>
+        <span class="text">GRE: V - 158 (80%) Q - 170 (96%) AW - 3.5 (41%)</span>
+        <span class="text">TOEFL: 110 (Reading - 30 Listening - 26 Speaking - 25 Writing - 29)</span> 
+    </div>
+    <br/>
+    
+    <div class="box">
+        <p1>Experiences</p1>
+        <hr class="style-two">
+    </div>
+    <div class="box">
+        <span class="right">Jul 2017 - Apr 2018</span>
+        <span class="left"><b>Data Analysis of Chronic Kidney Disease | Peking University</b> | Research Assistant</span>
+        <br/>
+        <span class="text">Advisor: <a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank"><b>Quanzheng Li</b></a>, associate professor at Harvard Medical School, Harvard University; </span>
+        <span class="text" style="text-indent:65px">
+        <b><a href="https://www.pkufh.com/Html/Doctors/Main/Detail_175.html" target="_blank">Luxia Zhang</a></b>, associate chief physician at Peking University First Hospital.
+        </span>
+        <ul>
+        <li class="text"> Extracted important features in Hospital Quality Monitoring System (HQMS) database using Decision Tree algorithm;</li>
+        <li class="text"> Implemented a "corresponding analysis" algorithm to reveal some unique patterns between patients' health condition and their type of Chronic Kidney Diseases (CKD), and tried to explain the reason why these patterns arose.</li>
+        </ul>
+    </div>
+    <br/>
+    
+    <div class="box">
+        <span class="right">Sep 2017 - Present</span>
+        <span class="left"><b> Multi-cell Detection and Classification | Peking University</b> | Research Assistant</span>
+        <br/>
+        <span class="text">Advisor: <b><a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank">Quanzheng Li</a></b>, associate professor at Harvard Medical School, Harvard University; </span>
+        <ul>
+        <li class="text"> Built a model with both detection and classification modules to extract cell patches and to classify patches with multiple, normal and abnormal red blood cells (RBCs), from sickle class disease (SCD) patient blood samples;</li>
+        <li class="text"> Our proposed model has achieved high detection and classification accuracy, 93.2% for single-cell patches (exceeding state-of-the-art model with 89.3% acc.) and 72.2% for multi-cell patches;</li>
+        <li class="text"> Experiments have shown that the model benefited from dataset containing extra multi–instance samples and the details are included in our paper submitted to <b><i>BMC</i></b>.</li>
+        </ul>
+    </div>
+    <br/>
+    <div class="box">
+        <span class="right">Sep 2018 - Present</span>
+        <span class="left"><b> Image and Graph Analysis for Alzheimer’s Disease | Mass General Hospital </b> | Research Assistant</span>
+        <br/>
+        <span class="text">Advisor: <b><a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank">Quanzheng Li</a></b>, associate professor at Harvard Medical School, Harvard University; </span>
+        <ul>
+        <li class="text"> Explored multi-layer graph learning methods for our AD brain dataset with multiple views including fMRI and DTI;</li>
+        <li class="text"> Used pretrained Inception V3 CNN on PET images to classify NC group and MCI group with very high accuracy (~97%);</li>
+        <li class="text"> Currently designing experiments to stress the importance of pretraining on both graph-based tasks and image-based tasks.</li>
+        </ul>
+    </div>
+</body>
+</html>
+
