--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@ li {
 li::before {
   content: "➢ ";
 }
-td
-{
-  text-align: left;
-}
+.ltd{text-align: left}
+.rtd{text-align: center}
 </style>
 
 <html>
@@ -151,28 +149,46 @@ td
         <hr class="style-two">
         <table id="customers">
             <tr>
-                <td width="40%">Introduction to Computation (A)</td>
-                <td width="14%">98/100</td>  
-                <td width="40%">Practice of Programming in C&C++</td>
-                <td width="14%">91/100</td>  
+                <td width="40%" class="ltd">Introduction to Computation (A)</td>
+                <td width="14%" class="rtd">98/100</td>  
+                <td width="40%" class="ltd">Practice of Programming in C&C++</td>
+                <td width="14%" class="rtd">91/100</td>  
             </tr>
             <tr>
-                <td>Biometrics</td>
-                <td>91/100</td>  
-                <td>Data Structure and Algorithm (A)</td>
-                <td>85/100</td>  
+                <td class="ltd">Biometrics</td>
+                <td class="rtd">91/100</td>  
+                <td class="ltd">Data Structure and Algorithm (A)</td>
+                <td class="rtd">85/100</td>  
             </tr>
             <tr>
-                <td>Introduction to Computer Systems</td>
-                <td>85.5/100</td>
-                <td>The Brain and Cognitive Science</td>
-                <td>87/100</td>  
+                <td class="ltd">Introduction to Computer Systems</td>
+                <td class="rtd">85.5/100</td>
+                <td class="ltd">The Brain and Cognitive Science</td>
+                <td class="rtd">87/100</td>  
             </tr>
             <tr>
-                <td>Introduction to Computer Systems</td>
-                <td>85.5/100</td>
-                <td>The Brain and Cognitive Science</td>
-                <td>87/100</td>  
+                <td class="ltd">Algorithm Design and Analysis</td>
+                <td class="rtd">85/100</td>
+                <td class="ltd">Algebraic Structure and Combinatorial Mathematics</td>
+                <td class="rtd">89/100</td>  
+            </tr>
+            <tr>
+                <td class="ltd">Human genetics: linkage analysis and disease genetics</td>
+                <td class="rtd">90/100</td>
+                <td class="ltd">Applied Algorighms</td>
+                <td class="rtd">92/100</td>  
+            </tr>
+            <tr>
+                <td class="ltd">Numerical Methods (B)</td>
+                <td class="rtd">90/100</td>
+                <td class="ltd">Probability Theory and Statistics (B)</td>
+                <td class="rtd">85/100</td>  
+            </tr>
+            <tr>
+                <td class="ltd">Introduction to Database Systems (Honor Track)</td>
+                <td class="rtd">89/100</td>
+                <td class="ltd">Deep Learning: Algorithms and Applications</td>
+                <td class="rtd">85/100</td>  
             </tr>
         </table>
     </div>
