--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ body {padding: 2em;}
 h1 {text-align: center; line-height: 0.7; font-family: "Georgia"; font-weight:normal;}
 p {text-align: center; line-height: 0.7; font-family: "Georgia";}
 p1 {line-height: 1; font-family: "Georgia"; font-size: 20px}
-.box{font-family: Georgia; line-height: 1.5; }
+.box{font-family: Georgia; line-height: 1.5;}
 .left{float: left; width: 79%; display: inline-block}
 .right{float: right; width: 20%; display: inline-block}
 .cleft{float: left; width: 40%; display: inline-block}
@@ -43,7 +43,7 @@ li::before {
 <body>
     <div>
         <h1>Jiaming Guo</h1>
-        <p> markguo1998@gmail.com | (857) 320-8746 </p>
+        <p> markguo1998 <i>at</i> gmail <i>dot</i> com | (857) 320-8746 </p>
         <p> 213 Mountain Ave, Malden, MA, 02148 </p>
     </div>
     <div class="box">
@@ -51,6 +51,7 @@ li::before {
         <hr class="style-two">
     </div>
     <div class="box">
+        <span class="text"><b>Undergraduate</b></span>
         <span class="right">Sep 2015 - Present</span>
         <span class="left"><b>Yuanpei College, Peking University</b>, China</span>
         <span class="text">Bachelor of Science in Data Science and Big Data Technology, Sep 2015 - Jul 2019 (expected)</span>
@@ -58,7 +59,13 @@ li::before {
         <span class="text">TOEFL: 110 (Reading - 30 Listening - 26 Speaking - 25 Writing - 29)</span> 
     </div>
     <br/>
-    
+    <div class="box">
+        <span class="text"><b>Exchange Visitor</b></span>
+        <span class="right">Sep 2018 - Present</span>
+        <span class="left"><b> Mass General Hospital & Harvard Medical School</b>, Massachusetts, US</span>
+        <span class="text">Research Focus: geometric deep learning in medical image analysis</span> 
+    </div>
+    <br/>
     <div class="box">
         <p1>Experiences</p1>
         <hr class="style-two">
@@ -78,7 +85,7 @@ li::before {
     
     <div class="box">
         <span class="right">Sep 2017 - Present</span>
-        <span class="left"><b> Multi-cell Detection and Classification | Peking University</b> | Research Assistant | </span>
+        <span class="left"><b><a href="project/multi-rbc-classification.html" target="_blank"> Multi-cell Detection and Classification</a> | Peking University</b> | Research Assistant | </span>
         <br/>
         <span class="text">Advisor: <b><a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank">Quanzheng Li</a></b>, associate professor at Harvard Medical School, Harvard University; </span>
         <ul>
@@ -112,7 +119,7 @@ li::before {
     <br/>
     <div class="box">
         <span class="right">Jul 2018 - Aug 2018</span>
-        <span class="left"><b> Bottle Detection in Yanjing Beer Production Line | Shaohai Data (Beijing) </b> | Deep Learning Research Intern | </span>
+        <span class="left"><b> Bottle Detection in Yanjing Beer Production Line | Shaohai Data (Beijing) </b> | Research Intern | </span>
         <br/>
         <span class="text">Advisor: <b>Mingyi Yuan</b>, Chief Technology Officer at Shaohai Data (Beijing). </span>
         <ul>
@@ -142,6 +149,12 @@ li::before {
     <div class="box">
         <p1>Leadership and Activities</p1>
         <hr class="style-two">
+    </div>
+    <br/>
+    <div class="box">
+        <p1>My Github Link</p1>
+        <hr class="style-two">
+        <span><a href="https://github.com/MarkGuo1998">here</a></span>
     </div>
     <br/>
     <div class="box">
