--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ li::before {
     </div>
     <div class="box">
         <span class="right">Jul 2017 - Apr 2018</span>
-        <span class="left"><b>Data Analysis of Chronic Kidney Disease | Peking University</b> | Research Assistant | </span>
+        <span class="left"><b><a href="project/ckd-analysis/ckd-analysis.html">Data Analysis of Chronic Kidney Disease</a> | Peking University</b> | Research Assistant | </span>
         <span class="text">Advisor: <a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank"><b>Quanzheng Li</b></a>, associate professor at Harvard Medical School, Harvard University; </span>
         <span class="text" style="text-indent:65px"> <b><a href="https://www.pkufh.com/Html/Doctors/Main/Detail_175.html" target="_blank">Luxia Zhang</a></b>, associate chief physician at Peking University First Hospital.
         </span>
@@ -85,7 +85,7 @@ li::before {
     
     <div class="box">
         <span class="right">Sep 2017 - Present</span>
-        <span class="left"><b><a href="project/multi-rbc-classification.html" target="_blank"> Multi-cell Detection and Classification</a> | Peking University</b> | Research Assistant | </span>
+        <span class="left"><b><a href="project/multi-rbc-classification/multi-rbc-classification.html" target="_blank"> Multi-cell Detection and Classification</a> | Peking University</b> | Research Assistant | </span>
         <br/>
         <span class="text">Advisor: <b><a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank">Quanzheng Li</a></b>, associate professor at Harvard Medical School, Harvard University; </span>
         <ul>
@@ -108,7 +108,7 @@ li::before {
     </div>
     <br/>
     <div class="box">
-        <span class="right">Jul 2018 - Aug 2018</span>
+        <span class="right">Sep 2017 - Jan 2018</span>
         <span class="left"><b> Introduction to Computer System | Peking University </b> | Teaching Assistant |  </span>
         <br/>
         <span class="text">Teacher: <b><a href="http://eecs.pku.edu.cn/EN/People/Faculty/Detail/?ID=6016" target="_blank">Jiangfang Yi</a></b>, associate professor at School of EECS, Peking University. </span>
