--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ li::before {
     </div>
     <div class="box">
         <span class="right">Jul 2017 - Apr 2018</span>
-        <span class="left"><b><a href="project/ckd-analysis/ckd-analysis.html">Data Analysis of Chronic Kidney Disease</a> | Peking University</b> | Research Assistant | </span>
+        <span class="left"><b><a href="project/ckd-analysis/ckd-analysis.html" target="_blank">Data Analysis of Chronic Kidney Disease</a> | Peking University</b> | Research Assistant | </span>
         <span class="text">Advisor: <a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank"><b>Quanzheng Li</b></a>, associate professor at Harvard Medical School, Harvard University; </span>
         <span class="text" style="text-indent:65px"> <b><a href="https://www.pkufh.com/Html/Doctors/Main/Detail_175.html" target="_blank">Luxia Zhang</a></b>, associate chief physician at Peking University First Hospital.
         </span>
@@ -188,7 +188,7 @@ li::before {
             <tr>
                 <td class="ltd">Human genetics: linkage analysis and disease genetics</td>
                 <td class="rtd">90/100</td>
-                <td class="ltd">Applied Algorighms</td>
+                <td class="ltd">Applied Algorithms</td>
                 <td class="rtd">92/100</td>  
             </tr>
             <tr>
