--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
 <style type="text/css">
-body {padding: 2em;}
+body {padding: 2em; font-family:"Georgia";}
 h1 {text-align: center; line-height: 0.7; font-family: "Georgia"; font-weight:normal;}
 p {text-align: center; line-height: 0.7; font-family: "Georgia";}
-p1 {line-height: 1; font-family: "Georgia"; font-size: 20px}
+p1 {line-height: 1; font-family: "Georgia"}
 .box{font-family: Georgia; line-height: 1.5;}
 .left{float: left; width: 79%; display: inline-block}
 .right{float: right; width: 20%; display: inline-block}
@@ -97,7 +97,7 @@ li::before {
     <br/>
     <div class="box">
         <span class="right">Sep 2018 - Present</span>
-        <span class="left"><b> Image and Graph Analysis for Alzheimer’s Disease | Mass General Hospital </b> | Research Assistant | </span>
+        <span class="left"><b><a href="project/alzheimers-analysis/alzheimers-analysis.html" target="_blank"> Image and Graph Analysis for Alzheimer’s Disease </a> | Mass General Hospital </b> | Research Assistant | </span>
         <br/>
         <span class="text">Advisor: <b><a href="http://gordon.mgh.harvard.edu/gc/people/faculty/quanzheng-li/" target="_blank">Quanzheng Li</a></b>, associate professor at Harvard Medical School, Harvard University. </span>
         <ul>
