--- a/project/alzheimers-analysis/alzheimers-analysis.html
+++ b/project/alzheimers-analysis/alzheimers-analysis.html
@@ -65,6 +65,7 @@
             <li>P<i>k</i> for a Graph Pooling Layer of size and stride <i>k</i>;</li>
             <li>GC<i>k</i> for a graph convolutional layer with <i>k</i> feature maps.</li>
         </ul>
+        <span class="text" style="text-indent:2em">The </span>
         <span class="text" style="text-indent:2em"> All FC<i>k</i> and GC<i>k</i> layers are followed by a <b>Leaky</b>ReLU activation with $\alpha=0.01$.</span>
         <span class="text" style="text-indent:2em"> The final layer is a softmax regression and the loss energy E is the cross-entropy with an <i>l2</i> regularization on the weights of all FC<i>k</i> layers. Mini-batches are of size S = 20.</span>
         <span class="text" style="text-indent:2em"> Our final network structure is denoted by GC<i>32</i>-P<i>4</i>-GC<i>64</i>-P<i>4</i>-FC<i>512</i>.</span> 
@@ -78,8 +79,18 @@
             <li>With our correlation graph as the input, the ChebNet yields the highest and stablest average classification accuracy (93+/-2%) among all region-based experiments.</li>
         </ul>
     </div>
-        
-   
+    <br/>
+    <div class="box">
+        <p1><b>Experiments and Results</b></p1>
+        <hr class="style-two">
+    </div>
+    <div><i>UNDER CONSTRUCTION</i></div>
+   <br/>
+    <div class="box">
+        <p1><b> Discussion </b></p1>
+        <hr class="style-two">
+    </div>
+    <div><i>UNDER CONSTRUCTION</i></div>
         
 </body>
 </html>
